# json-renderer-raylib

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md
.githooks/: pre-commit
examples/: empty_scene.json  invalid_scene.json  manipulator_scene.json  shapes_scene.json  valid_scene.json
schema/: scene.schema.json
src/: CMakeLists.txt
src/renderer/: CMakeLists.txt  CMakePresets.json  Makefile
src/renderer/src/: main.cpp
src/validator/: .golangci.yml  Makefile  README.md  go.mod  main.go
src/validator/cmd/validator/: validator.go
src/validator/internal/validator/: validator.go
src/validator/test/: validator_test.go
src/viewer/: CMakeLists.txt
src/viewer/include/: component_utils.h  domain.h  input_manager.h  loader.h  renderer.h  scene_manager.h
src/viewer/src/: component_utils.cpp  input_manager.cpp  loader.cpp  main.cpp  renderer.cpp  scene_manager.cpp
